--- a/M3-D4.html
+++ b/M3-D4.html
@@ -25,6 +25,27 @@
         -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <style>
+    #cart {
+      position: fixed;
+      top: 50%;
+      left: 0;
+      min-width: 50px;
+      min-height: 50px;
+      max-width: 50px;
+      max-height: 50px;
+      background-color: white;
+      border: 1px solid black;
+      z-index: 1;
+      color: white;
+    }
+
+    #cart:hover {
+      max-width: unset;
+      max-height: unset;
+      color: black;
+    }
+  </style>
 </head>
 
 <body>
@@ -36,6 +57,7 @@
     </form>
   </nav>
   <div id="cart">
+
 
   </div>
   <h1 class="text-center">List of our books</h1>
@@ -53,6 +75,7 @@
     let booksArr = []
     let shoppingCart = []
     const bookWrapper = document.getElementById("book-wrapper")
+    const shoppingList = document.getElementById("cart")
     const loadData = () => {
       fetch("https://striveschool-api.herokuapp.com/books")
         .then((resp) => resp.json()).then((books) => {
@@ -67,7 +90,7 @@
                           </p>
                        <div class="d-flex">
                         <a href="#" class="btn btn-primary">€ ${book.price}</a>
-                        <button id='${book.asin}' onclick=addToCart(${book.asin}) class="btn btn-secondary text-align-center ml-auto" >Add to cart</button>
+                        <button id='${book.asin}' onclick="addToCart('${book.asin}')" class="btn btn-secondary text-align-center ml-auto" >Add to cart</button>
                       </div>
                 </div>
               </div>`
@@ -86,6 +109,22 @@
       //console.log("after find", booksArr)
       shoppingCart.push(book)
       //console.log(shoppingCart)
+      refreshShoppingCart()
+
+    }
+    function refreshShoppingCart() {
+      cart.innerHTML = ""
+      shoppingCart.forEach(book => {
+        shoppingList.innerHTML += `<div class="shopping-item"><p style="color:green";>Cart</p>
+          <ol>
+            <li>
+              ${book.title},
+          
+              € ${book.price} 
+            </li>
+            </ol>
+          </div>`
+      })
 
     }
 
