--- a/M3-D4.html
+++ b/M3-D4.html
@@ -114,7 +114,7 @@
       shoppingCart.push(book)
       //console.log(shoppingCart)
       refreshShoppingCart()
-      element.closest(".card").parentNode.classList.toggle("selected")
+      element.closest(".card").classList.toggle("selected")
 
     }
     function refreshShoppingCart() {
